<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.0</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>com.akmal</groupId>
  <artifactId>messenger-spring-backend</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>messenger-spring-backend</name>
  <description>messenger-spring-backend</description>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <schemaRegistryUrl>http://127.0.0.1:8081</schemaRegistryUrl>
    <io.confluent.schema-registry.version>7.1.1</io.confluent.schema-registry.version>
    <avro.schemas.folder>src/main/resources/avro/com/akmal/messengerspringbackend</avro.schemas.folder>
    <avro.version>1.11.0</avro.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-cassandra</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-websocket</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.kafka</groupId>
      <artifactId>spring-kafka-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>23.0.0</version>
      <scope>compile</scope>
    </dependency>

    <!--  Security  -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-oauth2-resource-server</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-oauth2-jose</artifactId>
    </dependency>
    <!-- Kafka and Avro -->

    <dependency>
      <groupId>org.springframework.kafka</groupId>
      <artifactId>spring-kafka</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.avro</groupId>
      <artifactId>avro</artifactId>
      <version>${avro.version}</version>
    </dependency>

    <dependency>
      <groupId>io.confluent</groupId>
      <artifactId>kafka-avro-serializer</artifactId>
      <version>${io.confluent.schema-registry.version}</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>

<!--     Avro -->
      <plugin>
        <groupId>org.apache.avro</groupId>
        <artifactId>avro-maven-plugin</artifactId>
        <version>${avro.version}</version>
        <configuration>
          <sourceDirectory>${project.basedir}/src/main/resources/avro/com/akmal/messengerspringbackend</sourceDirectory>
          <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
          <includes>
            <include>**/*.avsc</include>
          </includes>
          <imports>
            <import>${project.basedir}/src/main/resources/avro/com/akmal/messengerspringbackend/thread/thread-message-event.avsc</import>
            <import>${project.basedir}/src/main/resources/avro/com/akmal/messengerspringbackend/thread/thread-presence-event.avsc</import>
          </imports>

        </configuration>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>schema</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.confluent</groupId>
        <artifactId>kafka-schema-registry-maven-plugin</artifactId>
        <version>${io.confluent.schema-registry.version}</version>
        <configuration>
          <outputDirectory>src/main/avro</outputDirectory>
          <schemaRegistryUrls>
            <param>${schemaRegistryUrl}</param>
          </schemaRegistryUrls>
          <subjects>
            <thread.event.types>${avro.schemas.folder}/thread/thread-event-types.avsc</thread.event.types>
            <thread.message.event>${avro.schemas.folder}/thread/thread-message-event.avsc</thread.message.event>
            <thread.presence.event>${avro.schemas.folder}/thread/thread-presence-event.avsc</thread.presence.event>
            <thread.event.key>${avro.schemas.folder}/thread/thread-event-key.avsc</thread.event.key>
          </subjects>
          <schemaTypes>
            <thread.event.types>AVRO</thread.event.types>
            <thread.message.event>AVRO</thread.message.event>
            <thread.presence.event>AVRO</thread.presence.event>
            <thread.event.key>AVRO</thread.event.key>
          </schemaTypes>
          <references>
            <thread-event-types>
              <reference>
                <name>com.akmal.messengerspringbackend.thread.ThreadMessageEvent</name>
                <subject>thread.message.event</subject>
                <version>1</version>
              </reference>
              <reference>
                <name>com.akmal.messengerspringbackend.thread.ThreadPresenceEvent</name>
                <subject>thread.presence.event</subject>
                <version>1</version>
              </reference>
            </thread-event-types>
          </references>
        </configuration>
        <goals>
          <goal>test-compatibility</goal>
        </goals>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>17</source>
          <target>17</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-help-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>show-profiles</id>
            <phase>compile</phase>
            <goals>
              <goal>active-profiles</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>


  <repositories>
    <repository>
      <id>confluent</id>
      <name>Confluent</name>
      <url>https://packages.confluent.io/maven/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>confluent</id>
      <url>https://packages.confluent.io/maven/</url>
    </pluginRepository>
  </pluginRepositories>

</project>
